--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : &name "Ramisa Akther Rahman"
 description              : &description "personal description"
 url                      : https://ramistarblob.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "ramistarblob/ramistarblob.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -25,9 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Ramisa Akther Rahman"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Yale University"
   location         : "New Haven, CT"
-  employer         : "Yale University"
+  employer         : # 
   uri              : # URL
   email            : "ramisa.rahman@yale.edu" 
 
@@ -53,7 +53,7 @@ author:
 
   # Social media
   artstation       : # Username
-  bluesky          : "https://bsky.app/profile/ramistarblob.bsky.social" # Replace this with you Bluesky username
+  bluesky          : "ramistarblob.bsky.social‬" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "www.linkedin.com/in/ramisa-a-rahman"
+  linkedin         : "ramisa-a-rahman"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -80,8 +80,6 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
-  books:
-    title: 'Books'
   manuscripts:
     title: 'Journal Articles'    
   conferences:
