--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
 
   # Social media
   artstation       : # Username
-  bluesky          : "ramistarblob.bsky.social‬" # Replace this with you Bluesky username
+  bluesky          : "ramistarblob.bsky.social"
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
