--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "air" # Currently available options are "default", "air"
 title                    : "Ramisa Akther Rahman"
 title_separator          : "-"
-name                     : &name "Ramisa Akther Rahman"
+name                     : &name "Ramisa Akther Rahman (রামিসা)"
 description              : &description "personal description"
 url                      : https://ramistarblob.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
