--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "cheese.png"
   name             : "Ramisa Rahman (রামিসা)"
   pronouns         : # example: "she/her"  
-  bio              : "Yale University AAAAA"
+  bio              : "Yale University"
   location         : "New Haven, CT"
   employer         : # 
   uri              : # URL
