--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "ramistarblob/ramistarblob.github.io"
 author:
   # Biographic information
   avatar           : "cheese.png"
-  name             : "Ramisa Rahman (রামিসা)"
+  name             : "Ramisa Akther Rahman (রামিসা)"
   pronouns         : # example: "she/her"  
   bio              : "Yale University"
   location         : "New Haven, CT"
